--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,23 +1,56 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,700&display=swap&subset=latin-ext');;
-body{
-font-family: 'Montserrat', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,700&display=swap&subset=latin-ext');
 
+html {
+  font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-a{
-  transition: all .5 ease-in-out;
+body {
+  font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-
+a {
+  transition: all 0.5 ease-in-out;
+}
 
 a:hover {
   text-decoration: none;
-transform: scale(1.05);
+  transform: scale(1.05);
 }
 
-#card_ant{
-transition: all 0.1s ease-in-out;
+#card_ant {
+  transition: all 0.1s ease-in-out;
+  font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto',
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
-#card_ant:hover{
-transform: translateY(-5px);
+#card_ant_preview {
+  transition: all 0.1s ease-in-out;
+  justify-self: self-end;
+  margin-right: 5px;
+  transform: scale(2);
+  margin-top: 320px;
+  font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto',
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
 
+#card_ant:hover {
+  transform: translateY(-5px);
+}
+
+.ant-form.ant-form-horizontal {
+  justify-self: self-start;
+  padding: 50px;
+  padding-left: 0;
+  padding-right: 130px;
+  margin-left: 0;
+  width: 100%;
+}
+.ant-col.ant-form-item-label.ant-col-xs-24.ant-col-sm-8 {
+  margin: 0;
 }
