--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,17 +1,15 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,700&display=swap&subset=latin-ext');
-
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:400,700|Poppins:400,700|Roboto:400,700&display=swap&subset=latin-ext');
 html {
-  font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-
 }
 body {
   font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background-color: #efefef;
 }
 a {
   transition: all 0.5 ease-in-out;
@@ -26,19 +24,19 @@ a:hover {
   transition: all 0.1s ease-in-out;
   font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto',
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
 }
 
 #card_ant_preview {
-  transition: all 0.1s ease-in-out;
-  justify-self: self-end;
-  margin-right: 5px;
-  transform: scale(1.6);
-  margin-top: 220px;
+  transition: all 0.1s ease-in-out !important;
+
+  justify-self: self-end !important;
+  margin-right: 5px !important;
+  transform: scale(1.5) !important;
+  margin-top: 200px !important;
   font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto',
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
-    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
 }
 
 #card_ant:hover {
@@ -52,7 +50,23 @@ a:hover {
   padding-right: 130px;
   margin-left: 0;
   width: 100%;
+  max-height: 90;
 }
 .ant-col.ant-form-item-label.ant-col-xs-24.ant-col-sm-8 {
   margin: 0;
+}
+
+ul li {
+  opacity: 0.7;
+  transition: all 0.15s ease-in-out;
+}
+ul li:hover {
+  opacity: 1;
+}
+
+@media (max-width: 768px) {
+  ul{
+
+
+  }
 }
