--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,8 +32,10 @@ a:hover {
 
   justify-self: self-end !important;
   margin-right: 5px !important;
-  transform: scale(1.5) !important;
-  margin-top: 200px !important;
+  transform: scale(1.4) !important;
+  margin-top: 170px !important;
+  overflow:hidden ;
+
   font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto',
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
@@ -42,6 +44,7 @@ a:hover {
 #card_ant:hover {
   transform: translateY(-5px);
 }
+
 
 .ant-form.ant-form-horizontal {
   justify-self: self-start;
@@ -56,18 +59,39 @@ a:hover {
   margin: 0;
 }
 
+.burger {
+  background: none;
+  border: none;
+  padding: 0;
+  font-size: 24px;
+  transform: scaleX(1.5);
+  display: none;
+}
+
 ul li {
   opacity: 0.7;
   transition: all 0.15s ease-in-out;
 }
 ul li:hover {
   opacity: 1;
-transform:scale(1.04)
+  transform: scale(1.04);
 }
 
 @media (max-width: 768px) {
-  ul{
+  .burger {
+    display: inline-block;
+  }
+  ul {
+    /* display: none !important; */
+    flex-direction: column;
+    width: 100%;
+  }
+  nav {
 
-
+    flex-wrap: wrap !important;
+    text-align: center;
+  }
+  ul li {
+    margin: 15px;
   }
 }
