--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,8 +33,8 @@ a:hover {
   justify-self: self-end !important;
   margin-right: 5px !important;
   transform: scale(1.4) !important;
-  margin-top: 170px !important;
-  overflow:hidden ;
+  margin-top: 140px !important;
+  overflow: hidden;
 
   font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto',
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
@@ -45,7 +45,6 @@ a:hover {
   transform: translateY(-5px);
 }
 
-
 .ant-form.ant-form-horizontal {
   justify-self: self-start;
   padding: 50px;
@@ -53,11 +52,13 @@ a:hover {
   padding-right: 130px;
   margin-left: 0;
   width: 100%;
-  max-height: 90;
 }
 .ant-col.ant-form-item-label.ant-col-xs-24.ant-col-sm-8 {
   margin: 0;
 }
+  .ant-row.ant-form-item {
+    margin: 0 0 9px 0 !important;
+  }
 
 .burger {
   background: none;
@@ -77,6 +78,10 @@ ul li:hover {
   transform: scale(1.04);
 }
 
+
+
+
+
 @media (max-width: 768px) {
   .burger {
     display: inline-block;
@@ -87,11 +92,43 @@ ul li:hover {
     width: 100%;
   }
   nav {
-
     flex-wrap: wrap !important;
     text-align: center;
   }
   ul li {
+    /* display:none; */
     margin: 15px;
+  }
+  div[style='display: grid; grid-template-columns: 30% 70%; width: 100%;'] {
+    display: flex !important;
+    flex-wrap: wrap !important;
+    justify-content: center !important;
+    align-items: center !important;
+  }
+
+  #card_ant_preview {
+    transform: scale(1) !important;
+    margin-top: 0px !important;
+  }
+
+  .ant-form.ant-form-horizontal {
+    justify-self: self-start;
+    padding: 10px;
+    margin-left: 0;
+    width: 90%;
+  }
+  .ant-col.ant-form-item-label.ant-col-xs-24.ant-col-sm-8,
+  .ant-form-item-required {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+  .ant-row.ant-form-item {
+    margin: 0 0 7px 0 !important;
+  }
+}
+
+@media (min-width: 769px) {
+  ul {
+    display: flex !important;
   }
 }
