--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,6 +22,7 @@ a:hover {
 
 #card_ant {
   transition: all 0.1s ease-in-out;
+  height: 340px;
   font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto',
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
@@ -32,8 +33,8 @@ a:hover {
 
   justify-self: self-end !important;
   margin-right: 5px !important;
-  transform: scale(1.4) !important;
-  margin-top: 140px !important;
+  transform: scale(1.3) !important;
+  margin-top: 110px !important;
   overflow: hidden;
 
   font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto',
@@ -56,9 +57,9 @@ a:hover {
 .ant-col.ant-form-item-label.ant-col-xs-24.ant-col-sm-8 {
   margin: 0;
 }
-  .ant-row.ant-form-item {
-    margin: 0 0 9px 0 !important;
-  }
+.ant-row.ant-form-item {
+  margin: 0 0 9px 0 !important;
+}
 
 .burger {
   background: none;
@@ -78,11 +79,13 @@ ul li:hover {
   transform: scale(1.04);
 }
 
-.animated.fadeIn{
-max-width: 100% !important;
+.animated.fadeIn {
+  max-width: 100% !important;
 }
 
-
+#type_cards_wrapper {
+  margin-bottom: 60px  !important;
+}
 
 @media (max-width: 768px) {
   .burger {
@@ -126,6 +129,16 @@ max-width: 100% !important;
   }
   .ant-row.ant-form-item {
     margin: 0 0 7px 0 !important;
+  }
+
+
+  #card_ant {
+    display: block !important;
+    margin: 0 auto !important;
+
+  }
+  h5{
+    text-align: center !important;
   }
 }
 
