--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,8 +22,7 @@ a:hover {
 
 #card_ant {
   transition: all 0.1s ease-in-out;
-  height: 340px;
-  font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto',
+align-items: center;  font-family: 'apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto',
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
 }
@@ -87,6 +86,14 @@ ul li:hover {
   margin-bottom: 60px  !important;
 }
 
+input[type='file']{
+  height: 1px;
+}
+
+label[name='Wybierz plik']{
+  margin-top: 40px;
+}
+
 @media (max-width: 768px) {
   .burger {
     display: inline-block;
@@ -104,6 +111,7 @@ ul li:hover {
     /* display:none; */
     margin: 15px;
   }
+
   div[style='display: grid; grid-template-columns: 30% 70%; width: 100%;'] {
     display: flex !important;
     flex-wrap: wrap !important;
